--- a/locale/sv.po
+++ b/locale/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-13 13:48+0200\n"
+"POT-Creation-Date: 2023-09-17 19:21+0200\n"
 "PO-Revision-Date: 2006-06-14 23:48+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -1462,30 +1462,6 @@ msgstr ""
 "Lista på tillgängliga metoder:\n"
 "\n"
 
-#: src/misc-gui.c:241
-#, c-format
-msgid ""
-"The error correction file is already present:\n"
-"\n"
-"%s\n"
-"\n"
-"Overwrite it?"
-msgstr ""
-
-#: src/misc-gui.c:639
-msgid "Do not ask again"
-msgstr ""
-
-#: src/misc-gui.c:660
-#, c-format
-msgid ""
-"Image file already exists and does not match the medium:\n"
-"\n"
-"%s\n"
-"\n"
-"The existing image file will be deleted."
-msgstr ""
-
 #: src/misc.c:225
 msgid ""
 "This software comes with  ABSOLUTELY NO WARRANTY.  This\n"
@@ -1545,6 +1521,30 @@ msgstr ""
 
 #: src/misc.c:801
 msgid "Image successfully truncated"
+msgstr ""
+
+#: src/misc-gui.c:241
+#, c-format
+msgid ""
+"The error correction file is already present:\n"
+"\n"
+"%s\n"
+"\n"
+"Overwrite it?"
+msgstr ""
+
+#: src/misc-gui.c:639
+msgid "Do not ask again"
+msgstr ""
+
+#: src/misc-gui.c:660
+#, c-format
+msgid ""
+"Image file already exists and does not match the medium:\n"
+"\n"
+"%s\n"
+"\n"
+"The existing image file will be deleted."
 msgstr ""
 
 #: src/preferences.c:454
@@ -2653,36 +2653,6 @@ msgstr ""
 msgid " [Appended %d/%d sectors to cache file %s; LBA=%<PRId64>, ssize=%d, %d sectors]\n"
 msgstr ""
 
-#: src/read-adaptive-window.c:84
-msgid "Adaptive reading:"
-msgstr "Adaptiv läsning:"
-
-#: src/read-adaptive-window.c:112
-msgid "Sectors processed"
-msgstr "Sektorer behandlade"
-
-#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
-msgid "readable"
-msgstr "läsbar"
-
-#: src/read-adaptive-window.c:119
-msgid "correctable"
-msgstr "korrigerbar"
-
-#: src/read-adaptive-window.c:123
-msgid "missing"
-msgstr "saknas"
-
-#: src/read-adaptive-window.c:133
-#, c-format
-msgid "Readable: %d.%d%% / %d.%d%% required"
-msgstr ""
-
-#: src/read-adaptive-window.c:140
-#, c-format
-msgid "Total recoverable: %d.%d%%"
-msgstr "Totalt återhämtningsbara: %d.%d%%"
-
 #: src/read-adaptive.c:57 src/rs01-create.c:1018
 #, c-format
 msgid ""
@@ -3008,44 +2978,35 @@ msgid ""
 "%2d.%1d%% of the image have been read (%<PRId64> sectors).\n"
 msgstr ""
 
-#: src/read-linear-window.c:102
+#: src/read-adaptive-window.c:84
+msgid "Adaptive reading:"
+msgstr "Adaptiv läsning:"
+
+#: src/read-adaptive-window.c:112
+msgid "Sectors processed"
+msgstr "Sektorer behandlade"
+
+#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
+msgid "readable"
+msgstr "läsbar"
+
+#: src/read-adaptive-window.c:119
+msgid "correctable"
+msgstr "korrigerbar"
+
+#: src/read-adaptive-window.c:123
+msgid "missing"
+msgstr "saknas"
+
+#: src/read-adaptive-window.c:133
 #, c-format
-msgid "Current Speed: %d.%dx"
-msgstr "Aktuell hastighet: %d.%dx"
+msgid "Readable: %d.%d%% / %d.%d%% required"
+msgstr ""
 
-#: src/read-linear-window.c:109 src/read-linear.c:515
+#: src/read-adaptive-window.c:140
 #, c-format
-msgid "Unreadable / skipped sectors: %<PRId64>"
-msgstr "Oläsbara / överhoppade sektorer: %<PRId64>"
-
-#: src/read-linear-window.c:264 src/read-linear-window.c:333
-msgid "Already present"
-msgstr "Finns redan"
-
-#: src/read-linear-window.c:298 src/read-linear-window.c:340
-#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
-msgid "Sectors with CRC errors"
-msgstr "Sektorer med CRC-fel"
-
-#: src/read-linear-window.c:321
-msgid "Medium state"
-msgstr "Mediastatus"
-
-#: src/read-linear-window.c:329
-msgid "Not touched this time"
-msgstr "Rörs inte denna gång"
-
-#: src/read-linear-window.c:336
-msgid "Successfully read"
-msgstr "Läsning lyckades"
-
-#: src/read-linear-window.c:343
-msgid "Unreadable / skipped"
-msgstr "Oläsbar / överhoppad"
-
-#: src/read-linear-window.c:454
-msgid "Speed"
-msgstr "Hastighet"
+msgid "Total recoverable: %d.%d%%"
+msgstr "Totalt återhämtningsbara: %d.%d%%"
 
 #: src/read-linear.c:122
 #, c-format
@@ -3099,6 +3060,11 @@ msgstr "klar.\n"
 #, c-format
 msgid "Waiting %d seconds for drive to spin up...\n"
 msgstr "Väntar %d sekunder på att enheten ska varva upp...\n"
+
+#: src/read-linear.c:515 src/read-linear-window.c:109
+#, c-format
+msgid "Unreadable / skipped sectors: %<PRId64>"
+msgstr "Oläsbara / överhoppade sektorer: %<PRId64>"
 
 #: src/read-linear.c:605
 #, c-format
@@ -3271,6 +3237,40 @@ msgid ""
 "The Image will be truncated accordingly. See the manual for details.\n"
 "Use the --dao option to disable image truncating.\n"
 msgstr ""
+
+#: src/read-linear-window.c:102
+#, c-format
+msgid "Current Speed: %d.%dx"
+msgstr "Aktuell hastighet: %d.%dx"
+
+#: src/read-linear-window.c:264 src/read-linear-window.c:333
+msgid "Already present"
+msgstr "Finns redan"
+
+#: src/read-linear-window.c:298 src/read-linear-window.c:340
+#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
+msgid "Sectors with CRC errors"
+msgstr "Sektorer med CRC-fel"
+
+#: src/read-linear-window.c:321
+msgid "Medium state"
+msgstr "Mediastatus"
+
+#: src/read-linear-window.c:329
+msgid "Not touched this time"
+msgstr "Rörs inte denna gång"
+
+#: src/read-linear-window.c:336
+msgid "Successfully read"
+msgstr "Läsning lyckades"
+
+#: src/read-linear-window.c:343
+msgid "Unreadable / skipped"
+msgstr "Oläsbar / överhoppad"
+
+#: src/read-linear-window.c:454
+msgid "Speed"
+msgstr "Hastighet"
 
 #: src/recover-raw.c:66
 #, c-format
@@ -5862,8 +5862,8 @@ msgstr ""
 
 #: src/welcome-window.c:84
 msgid ""
-"This is <b>v0.79.10-pl1</b>. The [patchlevel series] are enhanced from the last upstream release.\n"
-"We add support for BD-R TL/QL, a Windows build, an option to produce bigger BD-R RS03,\n"
+"This is <b>v0.79.10-pl2</b>. The [patchlevel series] are enhanced from the last upstream release.\n"
+"We add support for BD-R TL/QL, Windows and MacOS builds, an option to produce bigger BD-R RS03,\n"
 "images, support for stripping ECC from ISOs, re-enabled adaptive reading (except for RS03), and more.\n"
 "\n"
 "Please refer to the <i>Help &gt; Change log</i> menu for all the details."
