--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,9 @@
 #  You should have received a copy of the GNU General Public License
 #  along with dvdisaster. If not, see <http://www.gnu.org/licenses/>.
 
+0.79.10.patchlevel-2 17-09-2023 *UNOFFICIAL*
+- re-introduced MacOS build. No other functional change since v0.79.10-pl1.
+
 0.79.10.patchlevel-1 09-10-2021 *UNOFFICIAL*
 - sync: integrated changes from latest upstream,
         please refer to the entries below for details.
