--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.72.rc2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-13 13:48+0200\n"
+"POT-Creation-Date: 2023-09-17 19:21+0200\n"
 "PO-Revision-Date: 2010-06-09 11:13+0200\n"
 "Last-Translator: cg <cg@dvdisaster.org>\n"
 "Language-Team: Portuguese\n"
@@ -1481,30 +1481,6 @@ msgstr ""
 "Lista dos métodos disponíveis:\n"
 "\n"
 
-#: src/misc-gui.c:241
-#, c-format
-msgid ""
-"The error correction file is already present:\n"
-"\n"
-"%s\n"
-"\n"
-"Overwrite it?"
-msgstr ""
-
-#: src/misc-gui.c:639
-msgid "Do not ask again"
-msgstr ""
-
-#: src/misc-gui.c:660
-#, c-format
-msgid ""
-"Image file already exists and does not match the medium:\n"
-"\n"
-"%s\n"
-"\n"
-"The existing image file will be deleted."
-msgstr ""
-
 #: src/misc.c:225
 msgid ""
 "This software comes with  ABSOLUTELY NO WARRANTY.  This\n"
@@ -1566,6 +1542,30 @@ msgstr ""
 
 #: src/misc.c:801
 msgid "Image successfully truncated"
+msgstr ""
+
+#: src/misc-gui.c:241
+#, c-format
+msgid ""
+"The error correction file is already present:\n"
+"\n"
+"%s\n"
+"\n"
+"Overwrite it?"
+msgstr ""
+
+#: src/misc-gui.c:639
+msgid "Do not ask again"
+msgstr ""
+
+#: src/misc-gui.c:660
+#, c-format
+msgid ""
+"Image file already exists and does not match the medium:\n"
+"\n"
+"%s\n"
+"\n"
+"The existing image file will be deleted."
 msgstr ""
 
 #: src/preferences.c:454
@@ -2826,36 +2826,6 @@ msgstr " [Criando novo arquivo de cache %s]\n"
 msgid " [Appended %d/%d sectors to cache file %s; LBA=%<PRId64>, ssize=%d, %d sectors]\n"
 msgstr " [Anexados %d/%d setores ao arquivo de cache %s; LBA=%<PRId64>, ssize=%d, %d setores]\n"
 
-#: src/read-adaptive-window.c:84
-msgid "Adaptive reading:"
-msgstr "Leitura adaptiva:"
-
-#: src/read-adaptive-window.c:112
-msgid "Sectors processed"
-msgstr "Setores processados"
-
-#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
-msgid "readable"
-msgstr "legível"
-
-#: src/read-adaptive-window.c:119
-msgid "correctable"
-msgstr "corrigível"
-
-#: src/read-adaptive-window.c:123
-msgid "missing"
-msgstr "desaparecidos"
-
-#: src/read-adaptive-window.c:133
-#, c-format
-msgid "Readable: %d.%d%% / %d.%d%% required"
-msgstr "Legível: %d.%d%% / %d.%d%% necessários"
-
-#: src/read-adaptive-window.c:140
-#, c-format
-msgid "Total recoverable: %d.%d%%"
-msgstr "Total recuperável: %d.%d%%"
-
 #: src/read-adaptive.c:57 src/rs01-create.c:1018
 #, c-format
 msgid ""
@@ -3191,44 +3161,35 @@ msgstr ""
 "%s\n"
 "%2d.%1d%% da imagem foi lido (%<PRId64> setores).\n"
 
-#: src/read-linear-window.c:102
+#: src/read-adaptive-window.c:84
+msgid "Adaptive reading:"
+msgstr "Leitura adaptiva:"
+
+#: src/read-adaptive-window.c:112
+msgid "Sectors processed"
+msgstr "Setores processados"
+
+#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
+msgid "readable"
+msgstr "legível"
+
+#: src/read-adaptive-window.c:119
+msgid "correctable"
+msgstr "corrigível"
+
+#: src/read-adaptive-window.c:123
+msgid "missing"
+msgstr "desaparecidos"
+
+#: src/read-adaptive-window.c:133
 #, c-format
-msgid "Current Speed: %d.%dx"
-msgstr "Velocidade atual: %d.%dx"
+msgid "Readable: %d.%d%% / %d.%d%% required"
+msgstr "Legível: %d.%d%% / %d.%d%% necessários"
 
-#: src/read-linear-window.c:109 src/read-linear.c:515
+#: src/read-adaptive-window.c:140
 #, c-format
-msgid "Unreadable / skipped sectors: %<PRId64>"
-msgstr "Setores ilegíveis / pulados: %<PRId64>"
-
-#: src/read-linear-window.c:264 src/read-linear-window.c:333
-msgid "Already present"
-msgstr "Já presente"
-
-#: src/read-linear-window.c:298 src/read-linear-window.c:340
-#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
-msgid "Sectors with CRC errors"
-msgstr "Setores com erros de CRC"
-
-#: src/read-linear-window.c:321
-msgid "Medium state"
-msgstr "Estado da mídia"
-
-#: src/read-linear-window.c:329
-msgid "Not touched this time"
-msgstr "Não tocados dessa vez"
-
-#: src/read-linear-window.c:336
-msgid "Successfully read"
-msgstr "Lidos com sucesso"
-
-#: src/read-linear-window.c:343
-msgid "Unreadable / skipped"
-msgstr "Ilegíveis / pulados"
-
-#: src/read-linear-window.c:454
-msgid "Speed"
-msgstr "Velocidade"
+msgid "Total recoverable: %d.%d%%"
+msgstr "Total recuperável: %d.%d%%"
 
 #: src/read-linear.c:122
 #, c-format
@@ -3282,6 +3243,11 @@ msgstr "pronto.\n"
 #, c-format
 msgid "Waiting %d seconds for drive to spin up...\n"
 msgstr "Aguardando %d segundos para que o drive gire...\n"
+
+#: src/read-linear.c:515 src/read-linear-window.c:109
+#, c-format
+msgid "Unreadable / skipped sectors: %<PRId64>"
+msgstr "Setores ilegíveis / pulados: %<PRId64>"
 
 #: src/read-linear.c:605
 #, c-format
@@ -3458,6 +3424,40 @@ msgid ""
 "The Image will be truncated accordingly. See the manual for details.\n"
 "Use the --dao option to disable image truncating.\n"
 msgstr ""
+
+#: src/read-linear-window.c:102
+#, c-format
+msgid "Current Speed: %d.%dx"
+msgstr "Velocidade atual: %d.%dx"
+
+#: src/read-linear-window.c:264 src/read-linear-window.c:333
+msgid "Already present"
+msgstr "Já presente"
+
+#: src/read-linear-window.c:298 src/read-linear-window.c:340
+#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
+msgid "Sectors with CRC errors"
+msgstr "Setores com erros de CRC"
+
+#: src/read-linear-window.c:321
+msgid "Medium state"
+msgstr "Estado da mídia"
+
+#: src/read-linear-window.c:329
+msgid "Not touched this time"
+msgstr "Não tocados dessa vez"
+
+#: src/read-linear-window.c:336
+msgid "Successfully read"
+msgstr "Lidos com sucesso"
+
+#: src/read-linear-window.c:343
+msgid "Unreadable / skipped"
+msgstr "Ilegíveis / pulados"
+
+#: src/read-linear-window.c:454
+msgid "Speed"
+msgstr "Velocidade"
 
 #: src/recover-raw.c:66
 #, c-format
@@ -6155,8 +6155,8 @@ msgstr "Disco de exemplo"
 
 #: src/welcome-window.c:84
 msgid ""
-"This is <b>v0.79.10-pl1</b>. The [patchlevel series] are enhanced from the last upstream release.\n"
-"We add support for BD-R TL/QL, a Windows build, an option to produce bigger BD-R RS03,\n"
+"This is <b>v0.79.10-pl2</b>. The [patchlevel series] are enhanced from the last upstream release.\n"
+"We add support for BD-R TL/QL, Windows and MacOS builds, an option to produce bigger BD-R RS03,\n"
 "images, support for stripping ECC from ISOs, re-enabled adaptive reading (except for RS03), and more.\n"
 "\n"
 "Please refer to the <i>Help &gt; Change log</i> menu for all the details."
