--- a/locale/ru.po
+++ b/locale/ru.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.70.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-13 13:48+0200\n"
+"POT-Creation-Date: 2023-09-17 19:21+0200\n"
 "PO-Revision-Date: 2009-07-23 08:11+0300\n"
 "Last-Translator: Igor Gorbounov <igor.gorbounov@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -1482,30 +1482,6 @@ msgstr ""
 "Список имеющихся методов:\n"
 "\n"
 
-#: src/misc-gui.c:241
-#, c-format
-msgid ""
-"The error correction file is already present:\n"
-"\n"
-"%s\n"
-"\n"
-"Overwrite it?"
-msgstr ""
-
-#: src/misc-gui.c:639
-msgid "Do not ask again"
-msgstr ""
-
-#: src/misc-gui.c:660
-#, c-format
-msgid ""
-"Image file already exists and does not match the medium:\n"
-"\n"
-"%s\n"
-"\n"
-"The existing image file will be deleted."
-msgstr ""
-
 #: src/misc.c:225
 msgid ""
 "This software comes with  ABSOLUTELY NO WARRANTY.  This\n"
@@ -1567,6 +1543,30 @@ msgstr ""
 
 #: src/misc.c:801
 msgid "Image successfully truncated"
+msgstr ""
+
+#: src/misc-gui.c:241
+#, c-format
+msgid ""
+"The error correction file is already present:\n"
+"\n"
+"%s\n"
+"\n"
+"Overwrite it?"
+msgstr ""
+
+#: src/misc-gui.c:639
+msgid "Do not ask again"
+msgstr ""
+
+#: src/misc-gui.c:660
+#, c-format
+msgid ""
+"Image file already exists and does not match the medium:\n"
+"\n"
+"%s\n"
+"\n"
+"The existing image file will be deleted."
 msgstr ""
 
 #: src/preferences.c:454
@@ -2830,36 +2830,6 @@ msgstr " [Создание нового буферного файла %s]\n"
 msgid " [Appended %d/%d sectors to cache file %s; LBA=%<PRId64>, ssize=%d, %d sectors]\n"
 msgstr " [Добавлено %d/%d секторов к буферному файлу %s; LBA=%<PRId64>, размер с.=%d, %d секторов]\n"
 
-#: src/read-adaptive-window.c:84
-msgid "Adaptive reading:"
-msgstr "Адаптивное чтение:"
-
-#: src/read-adaptive-window.c:112
-msgid "Sectors processed"
-msgstr "Обработанные сектора"
-
-#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
-msgid "readable"
-msgstr "можно прочитать"
-
-#: src/read-adaptive-window.c:119
-msgid "correctable"
-msgstr "можно исправить"
-
-#: src/read-adaptive-window.c:123
-msgid "missing"
-msgstr "отсутствует"
-
-#: src/read-adaptive-window.c:133
-#, c-format
-msgid "Readable: %d.%d%% / %d.%d%% required"
-msgstr "Можно прочитать: %d.%d%% / %d.%d%% требуется"
-
-#: src/read-adaptive-window.c:140
-#, c-format
-msgid "Total recoverable: %d.%d%%"
-msgstr "Всего можно восстановить: %d.%d%%"
-
 #: src/read-adaptive.c:57 src/rs01-create.c:1018
 #, c-format
 msgid ""
@@ -3195,44 +3165,35 @@ msgstr ""
 "%s\n"
 "%2d.%1d%% образа прочитано (%<PRId64> секторов).\n"
 
-#: src/read-linear-window.c:102
+#: src/read-adaptive-window.c:84
+msgid "Adaptive reading:"
+msgstr "Адаптивное чтение:"
+
+#: src/read-adaptive-window.c:112
+msgid "Sectors processed"
+msgstr "Обработанные сектора"
+
+#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
+msgid "readable"
+msgstr "можно прочитать"
+
+#: src/read-adaptive-window.c:119
+msgid "correctable"
+msgstr "можно исправить"
+
+#: src/read-adaptive-window.c:123
+msgid "missing"
+msgstr "отсутствует"
+
+#: src/read-adaptive-window.c:133
 #, c-format
-msgid "Current Speed: %d.%dx"
-msgstr "Текущая скорость: %d.%dx"
+msgid "Readable: %d.%d%% / %d.%d%% required"
+msgstr "Можно прочитать: %d.%d%% / %d.%d%% требуется"
 
-#: src/read-linear-window.c:109 src/read-linear.c:515
+#: src/read-adaptive-window.c:140
 #, c-format
-msgid "Unreadable / skipped sectors: %<PRId64>"
-msgstr "Нечитаемые / пропущенные сектора: %<PRId64>"
-
-#: src/read-linear-window.c:264 src/read-linear-window.c:333
-msgid "Already present"
-msgstr "Уже есть"
-
-#: src/read-linear-window.c:298 src/read-linear-window.c:340
-#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
-msgid "Sectors with CRC errors"
-msgstr "Сектора с CRC-ошибками"
-
-#: src/read-linear-window.c:321
-msgid "Medium state"
-msgstr "Состояние носителя"
-
-#: src/read-linear-window.c:329
-msgid "Not touched this time"
-msgstr "В этот раз не затронут"
-
-#: src/read-linear-window.c:336
-msgid "Successfully read"
-msgstr "Успешно прочитано"
-
-#: src/read-linear-window.c:343
-msgid "Unreadable / skipped"
-msgstr "Нечитаемый / пропущенный"
-
-#: src/read-linear-window.c:454
-msgid "Speed"
-msgstr "Скорость"
+msgid "Total recoverable: %d.%d%%"
+msgstr "Всего можно восстановить: %d.%d%%"
 
 #: src/read-linear.c:122
 #, c-format
@@ -3286,6 +3247,11 @@ msgstr "готово.\n"
 #, c-format
 msgid "Waiting %d seconds for drive to spin up...\n"
 msgstr "Задержка на %d секунд для раскручивания привода...\n"
+
+#: src/read-linear.c:515 src/read-linear-window.c:109
+#, c-format
+msgid "Unreadable / skipped sectors: %<PRId64>"
+msgstr "Нечитаемые / пропущенные сектора: %<PRId64>"
 
 #: src/read-linear.c:605
 #, c-format
@@ -3465,6 +3431,40 @@ msgid ""
 "The Image will be truncated accordingly. See the manual for details.\n"
 "Use the --dao option to disable image truncating.\n"
 msgstr ""
+
+#: src/read-linear-window.c:102
+#, c-format
+msgid "Current Speed: %d.%dx"
+msgstr "Текущая скорость: %d.%dx"
+
+#: src/read-linear-window.c:264 src/read-linear-window.c:333
+msgid "Already present"
+msgstr "Уже есть"
+
+#: src/read-linear-window.c:298 src/read-linear-window.c:340
+#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
+msgid "Sectors with CRC errors"
+msgstr "Сектора с CRC-ошибками"
+
+#: src/read-linear-window.c:321
+msgid "Medium state"
+msgstr "Состояние носителя"
+
+#: src/read-linear-window.c:329
+msgid "Not touched this time"
+msgstr "В этот раз не затронут"
+
+#: src/read-linear-window.c:336
+msgid "Successfully read"
+msgstr "Успешно прочитано"
+
+#: src/read-linear-window.c:343
+msgid "Unreadable / skipped"
+msgstr "Нечитаемый / пропущенный"
+
+#: src/read-linear-window.c:454
+msgid "Speed"
+msgstr "Скорость"
 
 #: src/recover-raw.c:66
 #, c-format
@@ -6166,8 +6166,8 @@ msgstr "Пример диска"
 
 #: src/welcome-window.c:84
 msgid ""
-"This is <b>v0.79.10-pl1</b>. The [patchlevel series] are enhanced from the last upstream release.\n"
-"We add support for BD-R TL/QL, a Windows build, an option to produce bigger BD-R RS03,\n"
+"This is <b>v0.79.10-pl2</b>. The [patchlevel series] are enhanced from the last upstream release.\n"
+"We add support for BD-R TL/QL, Windows and MacOS builds, an option to produce bigger BD-R RS03,\n"
 "images, support for stripping ECC from ISOs, re-enabled adaptive reading (except for RS03), and more.\n"
 "\n"
 "Please refer to the <i>Help &gt; Change log</i> menu for all the details."
