--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,10 @@
 #  You should have received a copy of the GNU General Public License
 #  along with dvdisaster. If not, see <http://www.gnu.org/licenses/>.
 
+0.79.10.patchlevel-3 17-02-2024 *UNOFFICIAL*
+- fix: corrupt data under Windows with mmap
+- fix: re-enable buttons after Split is used
+
 0.79.10.patchlevel-2 17-09-2023 *UNOFFICIAL*
 - re-introduced MacOS build. No other functional change since v0.79.10-pl1.
 
